fix: solve compilation errors caused by smooks-core breaking changes
Refs: https://github.com/smooks/smooks/commit/5efc45400e59c234378a0235ab8b5b13b7f02120